# legged_state_estimator-old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt
bindings/python/legged_state_estimator/: CMakeLists.txt  __init__.py  contact_estimator.cpp  inekf_noise_params.cpp  leg_odometry.cpp  robot.cpp  schmitt_trigger.cpp  state_estimator.cpp  state_estimator_settings.cpp
examples/: a1.py  a1_mpc.py  a1_simulator.py  logistic.py  mpc_factory.py
include/legged_state_estimator/: complementary_filter.hpp  contact_estimator.hpp  extended_kalman_filter.hpp  high_pass_filter.hpp  imu_bias_lock.hpp  kalman_filter.hpp  kalman_filter_floating_base_system.hpp  kalman_filter_linear_system.hpp  leg_odometry.hpp  low_pass_filter.hpp  macros.hpp  moving_window_filter.hpp  robot.hpp  schmitt_trigger.hpp  state_estimator.hpp  state_estimator_settings.hpp  types.hpp
src/: contact_estimator.cpp  leg_odometry.cpp  robot.cpp  schmitt_trigger.cpp  state_estimator.cpp  state_estimator_settings.cpp
